Fix remote temporary stat encoding, added cts.isRemoteSkip method to just not send troublesome CTSs that cause error38